# bot-frame

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
infra/nginx/: nginx.conf
src/botframe/: __init__.py
src/botframe/api/: __init__.py  telegram.py
src/botframe/cli/: __init__.py  __main__.py  i18n.py  main.py
src/botframe/core/: __init__.py  app_state.py  application.py  bot.py
src/botframe/core/windows/: __init__.py  base.py  container.py
src/botframe/i18n/: __init__.py  extractor.py
src/botframe/middlewares/: i18n.py  windows.py
